# android-tlsn-prover

./: .gitignore  Cargo.toml  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
src/: lib.rs
